Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -97,10 +97,10 @@
   "pli-tv-kd11:2.1.19": "“When a procedure of condemnation has another three qualities, it’s also illegitimate, contrary to the Monastic Law, and improperly disposed of: ",
   "pli-tv-kd11:2.1.20": "it’s done against one who hasn’t committed any offense, it’s done illegitimately, it’s done by an incomplete assembly. ",
   "pli-tv-kd11:2.1.22": "When a procedure of condemnation has another three qualities, it’s also illegitimate, contrary to the Monastic Law, and improperly disposed of: ",
-  "pli-tv-kd11:2.1.23": "it is done against one who has committed an offense that isn’t clearable by confession, it is done illegitimately, it is done by an incomplete assembly. ",
-  "pli-tv-kd11:2.1.25": "When a procedure of condemnation has another three qualities, it is also illegitimate, contrary to the Monastic Law, and not properly resolved: ",
-  "pli-tv-kd11:2.1.26": "it is done against one who has confessed their offense, it is done illegitimately, it is done by an incomplete assembly. ",
-  "pli-tv-kd11:2.1.28": "“When a procedure of condemnation has another three qualities, it is also illegitimate, contrary to the Monastic Law, and not properly resolved: ",
+  "pli-tv-kd11:2.1.23": "it’s done against one who’s committed an offense that isn’t clearable by confession, it’s done illegitimately, it’s done by an incomplete assembly. ",
+  "pli-tv-kd11:2.1.25": "When a procedure of condemnation has another three qualities, it’s also illegitimate, contrary to the Monastic Law, and improperly disposed of: ",
+  "pli-tv-kd11:2.1.26": "it’s done against one who’s confessed their offense, it’s done illegitimately, it’s done by an incomplete assembly. ",
+  "pli-tv-kd11:2.1.28": "“When a procedure of condemnation has another three qualities, it’s also illegitimate, contrary to the Monastic Law, and improperly disposed of: ",
   "pli-tv-kd11:2.1.29": "it is done without having accused the person of their offense, it is done illegitimately, it is done by an incomplete assembly. ",
   "pli-tv-kd11:2.1.31": "When a procedure of condemnation has another three qualities, it is also illegitimate, contrary to the Monastic Law, and not properly resolved: ",
   "pli-tv-kd11:2.1.32": "it is done without having reminded the person of their offense, it is done illegitimately, it is done by an incomplete assembly. ",
