Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -102,10 +102,10 @@
   "pli-tv-kd11:2.1.26": "it’s done against one who’s confessed their offense, it’s done illegitimately, it’s done by an incomplete assembly. ",
   "pli-tv-kd11:2.1.28": "“When a procedure of condemnation has another three qualities, it’s also illegitimate, contrary to the Monastic Law, and improperly disposed of: ",
   "pli-tv-kd11:2.1.29": "it’s done without having accused the person of their offense, it’s done illegitimately, it’s done by an incomplete assembly. ",
-  "pli-tv-kd11:2.1.31": "When a procedure of condemnation has another three qualities, it is also illegitimate, contrary to the Monastic Law, and not properly resolved: ",
-  "pli-tv-kd11:2.1.32": "it is done without having reminded the person of their offense, it is done illegitimately, it is done by an incomplete assembly. ",
-  "pli-tv-kd11:2.1.34": "When a procedure of condemnation has another three qualities, it is also illegitimate, contrary to the Monastic Law, and not properly resolved: ",
-  "pli-tv-kd11:2.1.35": "it is done without having charged the person with their offense, it is done illegitimately, it is done by an incomplete assembly.” ",
+  "pli-tv-kd11:2.1.31": "When a procedure of condemnation has another three qualities, it’s also illegitimate, contrary to the Monastic Law, and improperly disposed of: ",
+  "pli-tv-kd11:2.1.32": "it’s done without having reminded the person of their offense, it’s done illegitimately, it’s done by an incomplete assembly. ",
+  "pli-tv-kd11:2.1.34": "When a procedure of condemnation has another three qualities, it’s also illegitimate, contrary to the Monastic Law, and improperly disposed of: ",
+  "pli-tv-kd11:2.1.35": "it’s done without having charged the person with their offense, it’s done illegitimately, it’s done by an incomplete assembly.” ",
   "pli-tv-kd11:2.1.37": "The group of twelve on illegitimate legal procedures is finished. ",
   "pli-tv-kd11:3.1.0": "1.2 The group of twelve on legitimate legal procedures ",
   "pli-tv-kd11:3.1.1": "“When a legal procedure of condemnation has three qualities, it is legitimate, in accordance with the Monastic Law, and properly resolved: ",
