--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -108,8 +108,8 @@
   "pli-tv-kd11:2.1.35": "it’s done without having charged the person with their offense, it’s done illegitimately, it’s done by an incomplete assembly.” ",
   "pli-tv-kd11:2.1.37": "The group of twelve on illegitimate legal procedures is finished. ",
   "pli-tv-kd11:3.1.0": "1.2 The group of twelve on legitimate legal procedures ",
-  "pli-tv-kd11:3.1.1": "“When a legal procedure of condemnation has three qualities, it is legitimate, in accordance with the Monastic Law, and properly resolved: ",
-  "pli-tv-kd11:3.1.2": "it is done in the presence of the accused, it is done with the questioning of the accused, it is done with the admission of the accused. ",
+  "pli-tv-kd11:3.1.1": "“When a legal procedure of condemnation has three qualities, it’s legitimate, in accordance with the Monastic Law, and properly disposed of: ",
+  "pli-tv-kd11:3.1.2": "it’s done in the presence of the accused, it’s done with the questioning of the accused, it’s done with the admission of the accused. ",
   "pli-tv-kd11:3.1.4": "When a procedure of condemnation has another three qualities, it is also legitimate, in accordance with the Monastic Law, and properly resolved: ",
   "pli-tv-kd11:3.1.5": "it is done against one who has committed an offense, it is done against one who has committed an offense that is clearable by confession, it is done against one who hasn’t confessed their offense. ",
   "pli-tv-kd11:3.1.7": "When a procedure of condemnation has another three qualities, it is also legitimate, in accordance with the Monastic Law, and properly resolved: ",
