--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -110,9 +110,9 @@
   "pli-tv-kd11:3.1.0": "1.2 The group of twelve on legitimate legal procedures ",
   "pli-tv-kd11:3.1.1": "“When a legal procedure of condemnation has three qualities, it’s legitimate, in accordance with the Monastic Law, and properly disposed of: ",
   "pli-tv-kd11:3.1.2": "it’s done in the presence of the accused, it’s done with the questioning of the accused, it’s done with the admission of the accused. ",
-  "pli-tv-kd11:3.1.4": "When a procedure of condemnation has another three qualities, it is also legitimate, in accordance with the Monastic Law, and properly resolved: ",
-  "pli-tv-kd11:3.1.5": "it is done against one who has committed an offense, it is done against one who has committed an offense that is clearable by confession, it is done against one who hasn’t confessed their offense. ",
-  "pli-tv-kd11:3.1.7": "When a procedure of condemnation has another three qualities, it is also legitimate, in accordance with the Monastic Law, and properly resolved: ",
+  "pli-tv-kd11:3.1.4": "When a procedure of condemnation has another three qualities, it’s also legitimate, in accordance with the Monastic Law, and disposed of: ",
+  "pli-tv-kd11:3.1.5": "it’s done against one who’s committed an offense, it’s done against one who’s committed an offense that’s clearable by confession, it’s done against one who hasn’t confessed their offense. ",
+  "pli-tv-kd11:3.1.7": "When a procedure of condemnation has another three qualities, it’s also legitimate, in accordance with the Monastic Law, and properly disposed of: ",
   "pli-tv-kd11:3.1.8": "it is done after having accused the person of their offense, it is done after having reminded the person of their offense, it is done after having charged the person with their offense. ",
   "pli-tv-kd11:3.1.10": "“When a procedure of condemnation has another three qualities, it is also legitimate, in accordance with the Monastic Law, and properly resolved: ",
   "pli-tv-kd11:3.1.11": "it is done in the presence of the accused, it is done legitimately, it is done by a unanimous assembly. ",
