Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -113,11 +113,11 @@
   "pli-tv-kd11:3.1.4": "When a procedure of condemnation has another three qualities, it’s also legitimate, in accordance with the Monastic Law, and disposed of: ",
   "pli-tv-kd11:3.1.5": "it’s done against one who’s committed an offense, it’s done against one who’s committed an offense that’s clearable by confession, it’s done against one who hasn’t confessed their offense. ",
   "pli-tv-kd11:3.1.7": "When a procedure of condemnation has another three qualities, it’s also legitimate, in accordance with the Monastic Law, and properly disposed of: ",
-  "pli-tv-kd11:3.1.8": "it is done after having accused the person of their offense, it is done after having reminded the person of their offense, it is done after having charged the person with their offense. ",
-  "pli-tv-kd11:3.1.10": "“When a procedure of condemnation has another three qualities, it is also legitimate, in accordance with the Monastic Law, and properly resolved: ",
-  "pli-tv-kd11:3.1.11": "it is done in the presence of the accused, it is done legitimately, it is done by a unanimous assembly. ",
-  "pli-tv-kd11:3.1.13": "When a procedure of condemnation has another three qualities, it is also legitimate, in accordance with the Monastic Law, and properly resolved: ",
-  "pli-tv-kd11:3.1.14": "it is done with the questioning of the accused, it is done legitimately, it is done by a unanimous assembly. ",
+  "pli-tv-kd11:3.1.8": "it’s done after accusing the person of their offense, it’s done after reminding the person of their offense, it’s done after charging the person with their offense. ",
+  "pli-tv-kd11:3.1.10": "“When a procedure of condemnation has another three qualities, it’s also legitimate, in accordance with the Monastic Law, and properly disposed of: ",
+  "pli-tv-kd11:3.1.11": "it’s done in the presence of the accused, it’s done legitimately, it’s done by a unanimous assembly. ",
+  "pli-tv-kd11:3.1.13": "When a procedure of condemnation has another three qualities, it’s also legitimate, in accordance with the Monastic Law, and properly disposed of: ",
+  "pli-tv-kd11:3.1.14": "it’s done with the questioning of the accused, it’s done legitimately, it’s done by a unanimous assembly. ",
   "pli-tv-kd11:3.1.16": "When a procedure of condemnation has another three qualities, it is also legitimate, in accordance with the Monastic Law, and properly resolved: ",
   "pli-tv-kd11:3.1.17": "it is done with the admission of the accused, it is done legitimately, it is done by a unanimous assembly. ",
   "pli-tv-kd11:3.1.19": "“When a procedure of condemnation has another three qualities, it is also legitimate, in accordance with the Monastic Law, and properly resolved: ",
