--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -118,8 +118,8 @@
   "pli-tv-kd11:3.1.11": "it’s done in the presence of the accused, it’s done legitimately, it’s done by a unanimous assembly. ",
   "pli-tv-kd11:3.1.13": "When a procedure of condemnation has another three qualities, it’s also legitimate, in accordance with the Monastic Law, and properly disposed of: ",
   "pli-tv-kd11:3.1.14": "it’s done with the questioning of the accused, it’s done legitimately, it’s done by a unanimous assembly. ",
-  "pli-tv-kd11:3.1.16": "When a procedure of condemnation has another three qualities, it is also legitimate, in accordance with the Monastic Law, and properly resolved: ",
-  "pli-tv-kd11:3.1.17": "it is done with the admission of the accused, it is done legitimately, it is done by a unanimous assembly. ",
+  "pli-tv-kd11:3.1.16": "When a procedure of condemnation has another three qualities, it’s also legitimate, in accordance with the Monastic Law, and properly disposed of: ",
+  "pli-tv-kd11:3.1.17": "it’s done with the admission of the accused, it’s done legitimately, it’s done by a unanimous assembly. ",
   "pli-tv-kd11:3.1.19": "“When a procedure of condemnation has another three qualities, it is also legitimate, in accordance with the Monastic Law, and properly resolved: ",
   "pli-tv-kd11:3.1.20": "it is done against one who has committed an offense, it is done legitimately, it is done by a unanimous assembly. ",
   "pli-tv-kd11:3.1.22": "When a procedure of condemnation has another three qualities, it is also legitimate, in accordance with the Monastic Law, and properly resolved: ",
