Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -120,8 +120,8 @@
   "pli-tv-kd11:3.1.14": "it’s done with the questioning of the accused, it’s done legitimately, it’s done by a unanimous assembly. ",
   "pli-tv-kd11:3.1.16": "When a procedure of condemnation has another three qualities, it’s also legitimate, in accordance with the Monastic Law, and properly disposed of: ",
   "pli-tv-kd11:3.1.17": "it’s done with the admission of the accused, it’s done legitimately, it’s done by a unanimous assembly. ",
-  "pli-tv-kd11:3.1.19": "“When a procedure of condemnation has another three qualities, it is also legitimate, in accordance with the Monastic Law, and properly resolved: ",
-  "pli-tv-kd11:3.1.20": "it is done against one who has committed an offense, it is done legitimately, it is done by a unanimous assembly. ",
+  "pli-tv-kd11:3.1.19": "“When a procedure of condemnation has another three qualities, it’s also legitimate, in accordance with the Monastic Law, and properly disposed of: ",
+  "pli-tv-kd11:3.1.20": "it’s done against one who’s committed an offense, it’s done legitimately, it’s done by a unanimous assembly. ",
   "pli-tv-kd11:3.1.22": "When a procedure of condemnation has another three qualities, it is also legitimate, in accordance with the Monastic Law, and properly resolved: ",
   "pli-tv-kd11:3.1.23": "it is done against one who has committed an offense that is clearable by confession, it is done legitimately, it is done by a unanimous assembly. ",
   "pli-tv-kd11:3.1.25": "When a procedure of condemnation has another three qualities, it is also legitimate, in accordance with the Monastic Law, and properly resolved: ",
