--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -122,11 +122,11 @@
   "pli-tv-kd11:3.1.17": "it’s done with the admission of the accused, it’s done legitimately, it’s done by a unanimous assembly. ",
   "pli-tv-kd11:3.1.19": "“When a procedure of condemnation has another three qualities, it’s also legitimate, in accordance with the Monastic Law, and properly disposed of: ",
   "pli-tv-kd11:3.1.20": "it’s done against one who’s committed an offense, it’s done legitimately, it’s done by a unanimous assembly. ",
-  "pli-tv-kd11:3.1.22": "When a procedure of condemnation has another three qualities, it is also legitimate, in accordance with the Monastic Law, and properly resolved: ",
-  "pli-tv-kd11:3.1.23": "it is done against one who has committed an offense that is clearable by confession, it is done legitimately, it is done by a unanimous assembly. ",
-  "pli-tv-kd11:3.1.25": "When a procedure of condemnation has another three qualities, it is also legitimate, in accordance with the Monastic Law, and properly resolved: ",
-  "pli-tv-kd11:3.1.26": "it is done against one who hasn’t confessed their offense, it is done legitimately, it is done by a unanimous assembly. ",
-  "pli-tv-kd11:3.1.28": "“When a procedure of condemnation has another three qualities, it is also legitimate, in accordance with the Monastic Law, and properly resolved: ",
+  "pli-tv-kd11:3.1.22": "When a procedure of condemnation has another three qualities, it’s also legitimate, in accordance with the Monastic Law, and properly disposed of: ",
+  "pli-tv-kd11:3.1.23": "it’s done against one who’s committed an offense that’s clearable by confession, it’s done legitimately, it’s done by a unanimous assembly. ",
+  "pli-tv-kd11:3.1.25": "When a procedure of condemnation has another three qualities, it’s also legitimate, in accordance with the Monastic Law, and properly disposed of: ",
+  "pli-tv-kd11:3.1.26": "it’s done against one who hasn’t confessed their offense, it’s done legitimately, it’s done by a unanimous assembly. ",
+  "pli-tv-kd11:3.1.28": "“When a procedure of condemnation has another three qualities, it’s also legitimate, in accordance with the Monastic Law, and properly disposed of: ",
   "pli-tv-kd11:3.1.29": "it is done after having accused the person of their offense, it is done legitimately, it is done by a unanimous assembly. ",
   "pli-tv-kd11:3.1.31": "When a procedure of condemnation has another three qualities, it is also legitimate, in accordance with the Monastic Law, and properly resolved: ",
   "pli-tv-kd11:3.1.32": "it is done after having reminded the person of their offense, it is done legitimately, it is done by a unanimous assembly. ",
