Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -127,11 +127,11 @@
   "pli-tv-kd11:3.1.25": "When a procedure of condemnation has another three qualities, it’s also legitimate, in accordance with the Monastic Law, and properly disposed of: ",
   "pli-tv-kd11:3.1.26": "it’s done against one who hasn’t confessed their offense, it’s done legitimately, it’s done by a unanimous assembly. ",
   "pli-tv-kd11:3.1.28": "“When a procedure of condemnation has another three qualities, it’s also legitimate, in accordance with the Monastic Law, and properly disposed of: ",
-  "pli-tv-kd11:3.1.29": "it is done after having accused the person of their offense, it is done legitimately, it is done by a unanimous assembly. ",
-  "pli-tv-kd11:3.1.31": "When a procedure of condemnation has another three qualities, it is also legitimate, in accordance with the Monastic Law, and properly resolved: ",
-  "pli-tv-kd11:3.1.32": "it is done after having reminded the person of their offense, it is done legitimately, it is done by a unanimous assembly. ",
-  "pli-tv-kd11:3.1.34": "When a procedure of condemnation has another three qualities, it is also legitimate, in accordance with the Monastic Law, and properly resolved: ",
-  "pli-tv-kd11:3.1.35": "it is done after having charged the person with their offense, it is done legitimately, it is done by a unanimous assembly.” ",
+  "pli-tv-kd11:3.1.29": "it’s done after accusing the person of their offense, it’s done legitimately, it’s done by a unanimous assembly. ",
+  "pli-tv-kd11:3.1.31": "When a procedure of condemnation has another three qualities, it’s also legitimate, in accordance with the Monastic Law, and properly disposed of: ",
+  "pli-tv-kd11:3.1.32": "it’s done after reminding the person of their offense, it’s done legitimately, it’s done by a unanimous assembly. ",
+  "pli-tv-kd11:3.1.34": "When a procedure of condemnation has another three qualities, it’s also legitimate, in accordance with the Monastic Law, and properly disposed of: ",
+  "pli-tv-kd11:3.1.35": "it’s done after charging the person with their offense, it’s done legitimately, it’s done by a unanimous assembly.” ",
   "pli-tv-kd11:3.1.37": "The group of twelve on legitimate legal procedures is finished. ",
   "pli-tv-kd11:4.1.0": "1.3 The group of six on wishing ",
   "pli-tv-kd11:4.1.1": "“When a monk has three qualities, the Sangha may, if it wishes, do a legal procedure of condemnation against him: ",
