--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -137,7 +137,7 @@
   "pli-tv-kd11:4.1.1": "“When a monk has three qualities, the Sangha may, if it wishes, do a legal procedure of condemnation against him: ",
   "pli-tv-kd11:4.1.2": "he’s quarrelsome, argumentative, and a creator of legal issues in the Sangha; ",
   "pli-tv-kd11:4.1.3": "he’s ignorant and incompetent, often committing offenses, lacking in boundaries; ",
-  "pli-tv-kd11:4.1.4": "he is constantly and improperly socializing with householders. ",
+  "pli-tv-kd11:4.1.4": "he’s constantly and improperly socializing with householders. ",
   "pli-tv-kd11:4.1.6": "When a monk has another three qualities, the Sangha may, if it wishes, do a procedure of condemnation against him: ",
   "pli-tv-kd11:4.1.7": "he has failed in the higher morality; he has failed in conduct; he has failed in view. ",
   "pli-tv-kd11:4.1.9": "When a monk has another three qualities, the Sangha may, if it wishes, do a procedure of condemnation against him: ",
