Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -147,12 +147,12 @@
   "pli-tv-kd11:4.2.3": "those who are ignorant and incompetent, often committing offenses, lacking in boundaries; ",
   "pli-tv-kd11:4.2.4": "those who are constantly and improperly socializing with householders. ",
   "pli-tv-kd11:4.2.6": "The Sangha may, if it wishes, do a procedure of condemnation against another three kinds of monks: ",
-  "pli-tv-kd11:4.2.7": "those who have failed in the higher morality; those who have failed in conduct; those who have failed in view. ",
+  "pli-tv-kd11:4.2.7": "those who’ve failed in the higher morality; those who’ve failed in conduct; those who’ve failed in view. ",
   "pli-tv-kd11:4.2.9": "The Sangha may, if it wishes, do a procedure of condemnation against another three kinds of monks: ",
   "pli-tv-kd11:4.2.10": "those who disparage the Buddha; those who disparage the Teaching; those who disparage the Sangha.” ",
   "pli-tv-kd11:4.2.12": "The group of six on wishing is finished. ",
   "pli-tv-kd11:5.1.0": "1.4 The eighteen kinds of conduct ",
-  "pli-tv-kd11:5.1.1": "“A monk who has had a legal procedure of condemnation done against himself should conduct himself properly. ",
+  "pli-tv-kd11:5.1.1": "“A monk who’s had a legal procedure of condemnation done against himself should conduct himself properly. ",
   "pli-tv-kd11:5.1.2": "This is the proper conduct: ",
   "pli-tv-kd11:5.1.3": "He should not give the full ordination. ",
   "pli-tv-kd11:5.1.4": "He should not give formal support. ",
