Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -225,7 +225,7 @@
   "pli-tv-kd11:8.2.20": "Any monk who approves of lifting the legal procedure of condemnation against the monks Paṇḍuka and Lohitaka should remain silent. ",
   "pli-tv-kd11:8.2.21": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd11:8.2.22": "The Sangha has lifted the legal procedure of condemnation against the monks Paṇḍuka and Lohitaka. ",
-  "pli-tv-kd11:8.2.23": "The Sangha approves and is therefore silent. I will remember it thus.’” ",
+  "pli-tv-kd11:8.2.23": "The Sangha approves and is therefore silent. I’ll remember it thus.’” ",
   "pli-tv-kd11:8.2.24": "The first section on the legal procedure of condemnation is finished. ",
   "pli-tv-kd11:9.1.0": "2. The legal procedure of demotion ",
   "pli-tv-kd11:9.1.1": "At that time Venerable Seyyasaka was ignorant and incompetent, often committing offenses, and lacking in boundaries. ",
