Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -248,7 +248,7 @@
   "pli-tv-kd11:9.1.22": "“Well then, the Sangha should do a legal procedure of demotion against the monk Seyyasaka, ",
   "pli-tv-kd11:9.1.23": "instructing him to live with formal support. ",
   "pli-tv-kd11:9.2.1": "And this is how it should be done. ",
-  "pli-tv-kd11:9.2.2": "First you should accuse the monk Seyyasaka. He should then be reminded of what he has done, before he is charged with an offense. A competent and capable monk should then inform the Sangha: ",
+  "pli-tv-kd11:9.2.2": "First you should accuse the monk Seyyasaka. He should then be reminded of what he has done, before he’s charged with an offense. A competent and capable monk should then inform the Sangha: ",
   "pli-tv-kd11:9.2.3": "‘Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd11:9.2.4": "The monk Seyyasaka is ignorant and incompetent, often committing offenses, and lacking in boundaries. ",
   "pli-tv-kd11:9.2.5": "He is constantly and improperly socializing with householders. ",
