Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -251,7 +251,7 @@
   "pli-tv-kd11:9.2.2": "First you should accuse the monk Seyyasaka. He should then be reminded of what he has done, before he’s charged with an offense. A competent and capable monk should then inform the Sangha: ",
   "pli-tv-kd11:9.2.3": "‘Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd11:9.2.4": "The monk Seyyasaka is ignorant and incompetent, often committing offenses, and lacking in boundaries. ",
-  "pli-tv-kd11:9.2.5": "He is constantly and improperly socializing with householders. ",
+  "pli-tv-kd11:9.2.5": "He’s constantly and improperly socializing with householders. ",
   "pli-tv-kd11:9.2.6": "Moreover, the monks regularly give him probation, send him back to the beginning, give him the trial period, and rehabilitate him. ",
   "pli-tv-kd11:9.2.7": "If it seems appropriate to the Sangha, the Sangha should do a legal procedure of demotion against the monk Seyyasaka, ",
   "pli-tv-kd11:9.2.8": "instructing him to live with formal support. ",
