--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -278,11 +278,11 @@
   "pli-tv-kd11:9.2.29": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd11:9.2.30": "The Sangha has done a legal procedure of demotion against the monk Seyyasaka, ",
   "pli-tv-kd11:9.2.31": "instructing him to live with formal support. ",
-  "pli-tv-kd11:9.2.32": "The Sangha approves and is therefore silent. I will remember it thus.’ ",
+  "pli-tv-kd11:9.2.32": "The Sangha approves and is therefore silent. I’ll remember it thus.’ ",
   "pli-tv-kd11:10.1.0": "2.1 The group of twelve on illegitimate legal procedures ",
-  "pli-tv-kd11:10.1.1": "“When a legal procedure of demotion has three qualities, it is illegitimate, contrary to the Monastic Law, and not properly resolved: ",
-  "pli-tv-kd11:10.1.2": "it is done in the absence of the accused, it is done without questioning the accused, it is done without the admission of the accused. ",
-  "pli-tv-kd11:10.1.4": "When a procedure of demotion has another three qualities, it is also illegitimate, contrary to the Monastic Law, and not properly resolved: ",
+  "pli-tv-kd11:10.1.1": "“When a legal procedure of demotion has three qualities, it’s illegitimate, contrary to the Monastic Law, and improperly disposed of: ",
+  "pli-tv-kd11:10.1.2": "it’s done in the absence of the accused, it’s done without questioning the accused, it’s done without the admission of the accused. ",
+  "pli-tv-kd11:10.1.4": "When a procedure of demotion has another three qualities, it is also illegitimate, contrary to the Monastic Law, and improperly disposed of: ",
   "pli-tv-kd11:10.1.5": "it is done against one who hasn’t committed any offense, it is done against one who has committed an offense that isn’t clearable by confession, it is done against one who has confessed their offense. ",
   "pli-tv-kd11:10.1.7": "When a procedure of demotion has another three qualities, it is also illegitimate, contrary to the Monastic Law, and not properly resolved: ",
   "pli-tv-kd11:10.1.8": "it is done without having accused the person of their offense, it is done without having reminded the person of their offense, it is done without having charged the person with their offense. ",
