--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -286,8 +286,8 @@
   "pli-tv-kd11:10.1.5": "it’s done against one who hasn’t committed any offense, it’s done against one who’s committed an offense that isn’t clearable by confession, it’s done against one who’s confessed their offense. ",
   "pli-tv-kd11:10.1.7": "When a procedure of demotion has another three qualities, it is also illegitimate, contrary to the Monastic Law, and improperly disposed of: ",
   "pli-tv-kd11:10.1.8": "it’s done without having accused the person of their offense, it’s done without having reminded the person of their offense, it’s done without having charged the person with their offense. ",
-  "pli-tv-kd11:10.1.10": "“When a procedure of demotion has another three qualities, it is also illegitimate, contrary to the Monastic Law, and not properly resolved: ",
-  "pli-tv-kd11:10.1.11": "it is done in the absence of the accused, it is done illegitimately, it is done by an incomplete assembly. ",
+  "pli-tv-kd11:10.1.10": "“When a procedure of demotion has another three qualities, it is also illegitimate, contrary to the Monastic Law, and improperly disposed of: ",
+  "pli-tv-kd11:10.1.11": "it’s done in the absence of the accused, it’s done illegitimately, it’s done by an incomplete assembly. ",
   "pli-tv-kd11:10.1.13": "When a procedure of demotion has another three qualities, it is also illegitimate, contrary to the Monastic Law, and not properly resolved: ",
   "pli-tv-kd11:10.1.14": "it is done without questioning the accused, it is done illegitimately, it is done by an incomplete assembly. ",
   "pli-tv-kd11:10.1.16": "When a procedure of demotion has another three qualities, it is also illegitimate, contrary to the Monastic Law, and not properly resolved: ",
