Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -290,7 +290,7 @@
   "pli-tv-kd11:10.1.11": "it’s done in the absence of the accused, it’s done illegitimately, it’s done by an incomplete assembly. ",
   "pli-tv-kd11:10.1.13": "When a procedure of demotion has another three qualities, it is also illegitimate, contrary to the Monastic Law, and improperly disposed of: ",
   "pli-tv-kd11:10.1.14": "it’s done without questioning the accused, it’s done illegitimately, it’s done by an incomplete assembly. ",
-  "pli-tv-kd11:10.1.16": "When a procedure of demotion has another three qualities, it is also illegitimate, contrary to the Monastic Law, and not properly resolved: ",
+  "pli-tv-kd11:10.1.16": "When a procedure of demotion has another three qualities, it is also illegitimate, contrary to the Monastic Law, and improperly disposed of: ",
   "pli-tv-kd11:10.1.17": "it is done without the admission of the accused, it is done illegitimately, it is done by an incomplete assembly. ",
   "pli-tv-kd11:10.1.19": "“When a procedure of demotion has another three qualities, it is also illegitimate, contrary to the Monastic Law, and not properly resolved: ",
   "pli-tv-kd11:10.1.20": "it is done against one who hasn’t committed any offense, it is done illegitimately, it is done by an incomplete assembly. ",
