--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -300,7 +300,7 @@
   "pli-tv-kd11:10.1.26": "it’s done against one who’s confessed their offense, it’s done illegitimately, it’s done by an incomplete assembly. ",
   "pli-tv-kd11:10.1.28": "“When a procedure of demotion has another three qualities, it is also illegitimate, contrary to the Monastic Law, and improperly disposed of: ",
   "pli-tv-kd11:10.1.29": "it’s done without having accused the person of their offense, it’s done illegitimately, it’s done by an incomplete assembly. ",
-  "pli-tv-kd11:10.1.31": "When a procedure of demotion has another three qualities, it is also illegitimate, contrary to the Monastic Law, and not properly resolved: ",
+  "pli-tv-kd11:10.1.31": "When a procedure of demotion has another three qualities, it is also illegitimate, contrary to the Monastic Law, and improperly disposed of: ",
   "pli-tv-kd11:10.1.32": "it is done without having reminded the person of their offense, it is done illegitimately, it is done by an incomplete assembly. ",
   "pli-tv-kd11:10.1.34": "When a procedure of demotion has another three qualities, it is also illegitimate, contrary to the Monastic Law, and not properly resolved: ",
   "pli-tv-kd11:10.1.35": "it is done without having charged the person with their offense, it is done illegitimately, it is done by an incomplete assembly.” ",
