--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -307,9 +307,9 @@
   "pli-tv-kd11:10.1.37": "The group of twelve on illegitimate legal procedures is finished. ",
   "pli-tv-kd11:10.1.38.0": "2.2 The group of twelve on legitimate legal procedures ",
   "pli-tv-kd11:10.1.38.1": "“When a legal procedure of demotion has three qualities, it is legitimate, in accordance with the Monastic Law, and properly disposed of: ",
-  "pli-tv-kd11:10.1.39": "it is done in the presence of the accused, it is done with the questioning of the accused, it is done with the admission of the accused. ",
-  "pli-tv-kd11:10.1.41": "When a procedure of demotion has another three qualities, it is also legitimate, in accordance with the Monastic Law, and properly resolved: ",
-  "pli-tv-kd11:10.1.42": "it is done against one who has committed an offense, it is done against one who has committed an offense that is clearable by confession, it is done against one who hasn’t confessed their offense. ",
+  "pli-tv-kd11:10.1.39": "it’s done in the presence of the accused, it’s done with the questioning of the accused, it’s done with the admission of the accused. ",
+  "pli-tv-kd11:10.1.41": "When a procedure of demotion has another three qualities, it is also legitimate, in accordance with the Monastic Law, and properly disposed of: ",
+  "pli-tv-kd11:10.1.42": "it’s done against one who’s committed an offense, it’s done against one who’s committed an offense that’s clearable by confession, it’s done against one who hasn’t confessed their offense. ",
   "pli-tv-kd11:10.1.44": "When a procedure of demotion has another three qualities, it is also legitimate, in accordance with the Monastic Law, and properly resolved: ",
   "pli-tv-kd11:10.1.45": "it is done after having accused the person of their offense, it is done after having reminded the person of their offense, it is done after having charged the person with their offense. ",
   "pli-tv-kd11:10.1.47": "“When a procedure of demotion has another three qualities, it is also legitimate, in accordance with the Monastic Law, and properly resolved: ",
