--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -325,7 +325,7 @@
   "pli-tv-kd11:10.1.62": "When a procedure of demotion has another three qualities, it is also legitimate, in accordance with the Monastic Law, and properly disposed of: ",
   "pli-tv-kd11:10.1.63": "it’s done against one who hasn’t confessed their offense, it’s done legitimately, it’s done by a unanimous assembly. ",
   "pli-tv-kd11:10.1.65": "“When a procedure of demotion has another three qualities, it is also legitimate, in accordance with the Monastic Law, and properly disposed of: ",
-  "pli-tv-kd11:10.1.66": "it is done after having accused the person of their offense, it is done legitimately, it is done by a unanimous assembly. ",
+  "pli-tv-kd11:10.1.66": "it’s done after accusing the person of their offense, it’s done legitimately, it’s done by a unanimous assembly. ",
   "pli-tv-kd11:10.1.68": "When a procedure of demotion has another three qualities, it is also legitimate, in accordance with the Monastic Law, and properly resolved: ",
   "pli-tv-kd11:10.1.69": "it is done after having reminded the person of their offense, it is done legitimately, it is done by a unanimous assembly. ",
   "pli-tv-kd11:10.1.71": "When a procedure of demotion has another three qualities, it is also legitimate, in accordance with the Monastic Law, and properly resolved: ",
