--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -333,7 +333,7 @@
   "pli-tv-kd11:10.1.74": "The group of twelve on legitimate legal procedures is finished. ",
   "pli-tv-kd11:10.1.75.0": "2.3 The group of six on wishing ",
   "pli-tv-kd11:10.1.75.1": "“When a monk has three qualities, the Sangha may, if it wishes, do a legal procedure of demotion against him: ",
-  "pli-tv-kd11:10.1.76": "he is quarrelsome, argumentative, and a creator of legal issues in the Sangha; ",
+  "pli-tv-kd11:10.1.76": "he’s quarrelsome, argumentative, and a creator of legal issues in the Sangha; ",
   "pli-tv-kd11:10.1.77": "he is ignorant and incompetent, often committing offenses, lacking in boundaries; ",
   "pli-tv-kd11:10.1.78": "he is constantly and improperly socializing with householders. ",
   "pli-tv-kd11:10.1.80": "When a monk has another three qualities, the Sangha may, if it wishes, do a procedure of demotion against him: ",
