Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -345,12 +345,12 @@
   "pli-tv-kd11:10.1.88": "those who are ignorant and incompetent, often committing offenses, lacking in boundaries; ",
   "pli-tv-kd11:10.1.89": "those who are constantly and improperly socializing with householders. ",
   "pli-tv-kd11:10.1.91": "The Sangha may, if it wishes, do a procedure of demotion against another three kinds of monks: ",
-  "pli-tv-kd11:10.1.92": "those who have failed in the higher morality; those who have failed in conduct; those who have failed in view. ",
+  "pli-tv-kd11:10.1.92": "those who’ve failed in the higher morality; those who’ve failed in conduct; those who’ve failed in view. ",
   "pli-tv-kd11:10.1.94": "The Sangha may, if it wishes, do a procedure of demotion against another three kinds of monks: ",
   "pli-tv-kd11:10.1.95": "those who disparage the Buddha; those who disparage the Teaching; those who disparage the Sangha.” ",
   "pli-tv-kd11:10.1.97": "The group of six on wishing is finished. ",
   "pli-tv-kd11:10.1.98.0": "2.4 The eighteen kinds of conduct ",
-  "pli-tv-kd11:10.1.98.1": "“A monk who has had a legal procedure of demotion done against himself should conduct himself properly. ",
+  "pli-tv-kd11:10.1.98.1": "“A monk who’s had a legal procedure of demotion done against himself should conduct himself properly. ",
   "pli-tv-kd11:10.1.99": "This is the proper conduct: ",
   "pli-tv-kd11:10.1.100": "He should not give the full ordination. ",
   "pli-tv-kd11:10.1.101": "He should not give formal support. ",
