Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -426,7 +426,7 @@
   "pli-tv-kd11:12.2.21": "Any monk who approves of lifting the legal procedure of demotion against the monk Seyyasaka should remain silent. ",
   "pli-tv-kd11:12.2.22": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd11:12.2.23": "The Sangha has lifted the legal procedure of demotion against the monk Seyyasaka. ",
-  "pli-tv-kd11:12.2.24": "The Sangha approves and is therefore silent. I will remember it thus.’” ",
+  "pli-tv-kd11:12.2.24": "The Sangha approves and is therefore silent. I’ll remember it thus.’” ",
   "pli-tv-kd11:12.2.25": "The second section on the legal procedure of demotion is finished. ",
   "pli-tv-kd11:13.1.0": "3. The legal procedure of banishment ",
   "pli-tv-kd11:13.1.1": "At one time Assaji and Punabbasuka were the resident monks at Kīṭāgiri. They were bad and shameless, ",
