Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -559,8 +559,8 @@
   "pli-tv-kd11:14.1.35.0": "3.3 The group of fourteen on wishing ",
   "pli-tv-kd11:14.1.35.1": "“When a monk has three qualities, the Sangha may, if it wishes, do a legal procedure of banishing him: ",
   "pli-tv-kd11:14.1.36": "he’s quarrelsome, argumentative, and a creator of legal issues in the Sangha; ",
-  "pli-tv-kd11:14.1.37": "he is ignorant and incompetent, often committing offenses, lacking in boundaries; ",
-  "pli-tv-kd11:14.1.38": "he is constantly and improperly socializing with householders. ",
+  "pli-tv-kd11:14.1.37": "he’s ignorant and incompetent, often committing offenses, lacking in boundaries; ",
+  "pli-tv-kd11:14.1.38": "he’s constantly and improperly socializing with householders. ",
   "pli-tv-kd11:14.1.40": "When a monk has another three qualities, the Sangha may, if it wishes, do a procedure of banishing him: ",
   "pli-tv-kd11:14.1.41": "he has failed in the higher morality; he has failed in conduct; he has failed in view. ",
   "pli-tv-kd11:14.1.43": "When a monk has another three qualities, the Sangha may, if it wishes, do a procedure of banishing him: ",
