Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -568,7 +568,7 @@
   "pli-tv-kd11:14.1.46": "“When a monk has another three qualities, the Sangha may, if it wishes, do a procedure of banishing him: ",
   "pli-tv-kd11:14.1.47": "his bodily conduct is frivolous; his verbal conduct is frivolous; his bodily and verbal conduct are frivolous. ",
   "pli-tv-kd11:14.1.49": "When a monk has another three qualities, the Sangha may, if it wishes, do a procedure of banishing him: ",
-  "pli-tv-kd11:14.1.50": "he is improperly behaved by body; he is improperly behaved by speech; he is improperly behaved by body and speech. ",
+  "pli-tv-kd11:14.1.50": "he’s improperly behaved by body; he’s improperly behaved by speech; he’s improperly behaved by body and speech. ",
   "pli-tv-kd11:14.1.52": "When a monk has another three qualities, the Sangha may, if it wishes, do a procedure of banishing him: ",
   "pli-tv-kd11:14.1.53": "his bodily conduct is harmful; his verbal conduct is harmful; his bodily and verbal conduct are harmful. ",
   "pli-tv-kd11:14.1.55": "When a monk has another three qualities, the Sangha may, if it wishes, do a procedure of banishing him: ",
