Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -578,7 +578,7 @@
   "pli-tv-kd11:14.2.3": "those who are ignorant and incompetent, often committing offenses, lacking in boundaries; ",
   "pli-tv-kd11:14.2.4": "those who are constantly and improperly socializing with householders. ",
   "pli-tv-kd11:14.2.6": "The Sangha may, if it wishes, do a procedure of banishment against another three kinds of monks: ",
-  "pli-tv-kd11:14.2.7": "those who have failed in the higher morality; those who have failed in conduct; those who have failed in view. ",
+  "pli-tv-kd11:14.2.7": "those who’ve failed in the higher morality; those who’ve failed in conduct; those who’ve failed in view. ",
   "pli-tv-kd11:14.2.9": "The Sangha may, if it wishes, do a procedure of banishment against another three kinds of monks: ",
   "pli-tv-kd11:14.2.10": "those who disparage the Buddha; those who disparage the Teaching; those who disparage the Sangha. ",
   "pli-tv-kd11:14.2.12": "“The Sangha may, if it wishes, do a procedure of banishment against another three kinds of monks: ",
