Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -729,7 +729,7 @@
   "pli-tv-kd11:18.5.3": "and told him about the conversation he had had with Citta. ",
   "pli-tv-kd11:18.5.4": "The Buddha rebuked him, ",
   "pli-tv-kd11:18.5.5": "“It’s not suitable, foolish man, it’s not proper, it’s not worthy of a monastic, it’s not allowable, it’s not to be done. ",
-  "pli-tv-kd11:18.5.6": "How can you demean and insult Citta, who has faith and confidence, who is a donor, benefactor, and supporter of the Sangha? ",
+  "pli-tv-kd11:18.5.6": "How can you demean and insult Citta, who has faith and confidence, who’s a donor, benefactor, and supporter of the Sangha? ",
   "pli-tv-kd11:18.5.7": "This will affect people’s confidence …” ",
   "pli-tv-kd11:18.5.8": "After rebuking him … ",
   "pli-tv-kd11:18.5.9": "he gave a teaching and addressed the monks: ",
