Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -736,7 +736,7 @@
   "pli-tv-kd11:18.5.10": "“Well then, do a legal procedure of reconciliation against the monk Sudhamma, ",
   "pli-tv-kd11:18.5.11": "instructing him to ask Citta for forgiveness. ",
   "pli-tv-kd11:18.6.1": "And it should be done like this. ",
-  "pli-tv-kd11:18.6.2": "First you should accuse the monk Sudhamma. He should then be reminded of what he has done, before he is charged with an offense. A competent and capable monk should then inform the Sangha: ",
+  "pli-tv-kd11:18.6.2": "First you should accuse the monk Sudhamma. He should then be reminded of what he has done, before he’s charged with an offense. A competent and capable monk should then inform the Sangha: ",
   "pli-tv-kd11:18.6.3": "‘Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd11:18.6.4": "The monk Sudhamma has demeaned and insulted the householder Citta, who has faith and confidence, who is a donor, benefactor, and supporter of the Sangha. ",
   "pli-tv-kd11:18.6.5": "If it seems appropriate to the Sangha, the Sangha should do a legal procedure of reconciliation against the monk Sudhamma, ",
