Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -843,7 +843,7 @@
   "pli-tv-kd11:22.2.10": "Any monk who approves of giving monk so-and-so to Sudhamma as a companion messenger to ask Citta for forgiveness should remain silent. ",
   "pli-tv-kd11:22.2.11": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd11:22.2.12": "The Sangha has given monk so-and-so to Sudhamma as a companion messenger to ask Citta for forgiveness. ",
-  "pli-tv-kd11:22.2.13": "The Sangha approves and is therefore silent. I will remember it thus.’ ",
+  "pli-tv-kd11:22.2.13": "The Sangha approves and is therefore silent. I’ll remember it thus.’ ",
   "pli-tv-kd11:22.3.1": "“Sudhamma should now go to Macchikāsaṇḍa with that monk as a companion messenger to ask Citta for forgiveness, saying, ",
   "pli-tv-kd11:22.3.2": "‘Please forgive me, householder; I wish to reconcile with you.’ ",
   "pli-tv-kd11:22.3.3": "If he forgives, all is well. ",
