Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -924,7 +924,7 @@
   "pli-tv-kd11:25.1.15": "“Well then, the Sangha should do a legal procedure of ejecting the monk Channa for not recognizing an offense, ",
   "pli-tv-kd11:25.1.16": "prohibiting him from living with the Sangha. ",
   "pli-tv-kd11:25.2.1": "And this is how it should be done. ",
-  "pli-tv-kd11:25.2.2": "First you should accuse the monk Channa. He should then be reminded of what he has done, before he is charged with an offense. A competent and capable monk should then inform the Sangha: ",
+  "pli-tv-kd11:25.2.2": "First you should accuse the monk Channa. He should then be reminded of what he has done, before he’s charged with an offense. A competent and capable monk should then inform the Sangha: ",
   "pli-tv-kd11:25.2.3": "‘Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd11:25.2.4": "The monk Channa has committed an offense, but refuses to recognize it. ",
   "pli-tv-kd11:25.2.5": "If it seems appropriate to the Sangha, the Sangha should do a legal procedure of ejecting Channa for not recognizing an offense, ",
